--- a/config.json
+++ b/config.json
@@ -4,6 +4,10 @@
     "port" : 5000,
     "debug" : false,
     "sessionSecret" : "12345",
+    "basicAuth": {
+        "username": "test",
+        "password": "test"
+    },
     "redis" : {
                 "host" : "localhost",
                 "port" : 6379,
